--- a/src/app/features/hero/hero.component.html
+++ b/src/app/features/hero/hero.component.html
@@ -1,2 +1,4 @@
 <app-topbar></app-topbar>
-<app-hero-list></app-hero-list>
+<div class="container mt-5">
+    <router-outlet></router-outlet>
+</div>
