--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,20 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 :root {
-    --mat-toolbar-standard-height: 64px;
-    --bs-body-bg: #eee;
-    --mat-table-background-color: #fff;
-    --mat-toolbar-container-background-color: blue;
-    --mat-toolbar-container-text-color: white;
-    --mat-table-header-headline-font: "Raleway", serif;
-  }
+  --mat-toolbar-standard-height: 64px;
+  --bs-body-bg: #eee;
+  --mat-table-background-color: #fff;
+  --mat-toolbar-container-background-color: #2b9e69;
+  --mat-toolbar-container-text-color: white;
+  --mat-table-header-headline-font: "Raleway", serif;
+  --mat-table-header-headline-weight: 700;
+  --mat-form-field-container-text-font: "Raleway", serif;
+  --mdc-filled-button-container-color: #2b9e69;
+  --mdc-filled-text-field-focus-label-text-color: #2b9e69;
+  --mdc-filled-text-field-focus-active-indicator-color: #2b9e69;
+  --mdc-filled-text-field-caret-color: #2b9e69;
+  --mdc-outlined-text-field-caret-color: #2b9e69;
+}
 
-  body {
-    font-family: "Raleway", serif;
-  }
-table {
-    background: #fff;
-    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, .1);
-    border-radius: 4px;
-    overflow: hidden;
+body {
+  font-family: "Raleway", serif;
+}
+
+h1 {
+  font-size: 24px;
+}
+.cursor-pointer {
+  cursor: pointer;
+}
+table, .card {
+  background: #fff;
+  box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  overflow: hidden;
 }
