add library local DB, improve services, add interceptor loading, add paginatedList

--- a/src/app/features/hero/components/topbar/topbar.component.html
+++ b/src/app/features/hero/components/topbar/topbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
     <div class="container">
-        <span>My Application</span>
+        <span>SuperHeroés</span>
     </div>
 </mat-toolbar>
