--- a/src/app/features/hero/components/hero-list/hero-list.component.html
+++ b/src/app/features/hero/components/hero-list/hero-list.component.html
@@ -2,55 +2,66 @@
 <div class="d-flex justify-content-between mt-4 align-items-end">
     <mat-form-field appearance="outline">
         <mat-label>Buscar</mat-label>
-        <input matInput type="search" placeholder="Ex. Pizza" value="Sushi">
+        <input #searchInput matInput type="search" placeholder="Ingrese su búsqueda" (input)="getSearchWord()">
     </mat-form-field>
 
 
     <button class="mb-3 p-4 d-flex align-items-center" mat-flat-button color="primary"
         [routerLink]="'/create-hero'">Crea Heroe <i class="bi bi-plus-circle"></i></button>
 </div>
-<ng-container *ngIf="{ data: vm$ | async } as vm; else loading">
-    <table mat-table [dataSource]="vm.data.heroes" class="mat-elevation-z8">
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Nombre </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-        <ng-container matColumnDef="power">
-            <th mat-header-cell *matHeaderCellDef> Poder </th>
-            <td mat-cell *matCellDef="let element"> {{element.power}} </td>
-        </ng-container>
+<ng-container *ngIf="{ data: vm$ | async } as vm">
+    <ng-container *ngIf="vm.data.heroes.length > 0; else emptyList">
+        <div class="card">
+            <table mat-table [dataSource]="vm.data.heroes" class="mat-elevation-z8">
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
+                <ng-container matColumnDef="power">
+                    <th mat-header-cell *matHeaderCellDef> Poder </th>
+                    <td mat-cell *matCellDef="let element"> {{element.power}} </td>
+                </ng-container>
 
-        <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef> Peso </th>
-            <td mat-cell *matCellDef="let element"> {{element.weight}}kg </td>
-        </ng-container>
+                <ng-container matColumnDef="weight">
+                    <th mat-header-cell *matHeaderCellDef> Peso </th>
+                    <td mat-cell *matCellDef="let element"> {{element.weight}}kg </td>
+                </ng-container>
 
 
-        <ng-container matColumnDef="height">
-            <th mat-header-cell *matHeaderCellDef> Altura </th>
-            <td mat-cell *matCellDef="let element"> {{element.height}}cm </td>
-        </ng-container>
+                <ng-container matColumnDef="height">
+                    <th mat-header-cell *matHeaderCellDef> Altura </th>
+                    <td mat-cell *matCellDef="let element"> {{element.height}}cm </td>
+                </ng-container>
 
-        <ng-container matColumnDef="enemy">
-            <th mat-header-cell *matHeaderCellDef> Enemigo </th>
-            <td mat-cell *matCellDef="let element"> {{element.enemy}} </td>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef class="text-end">Acciones </th>
-            <td mat-cell *matCellDef="let element" class="text-end">
-                <div class="d-flex justify-content-end">
-                    <div class="cursor-pointer me-3" [routerLink]="'/edit-hero/'+element.id" matTooltip="Editar Heroe">
-                        <i class="bi bi-pencil orange"></i>
-                    </div>
-                    <div class="cursor-pointer" (click)="deleteHeroe(element)" matTooltip="Borrar Heroe"><i
-                            class="bi bi-trash3 red"></i></div>
-                </div>
-            </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+                <ng-container matColumnDef="enemy">
+                    <th mat-header-cell *matHeaderCellDef> Enemigo </th>
+                    <td mat-cell *matCellDef="let element"> {{element.enemy}} </td>
+                </ng-container>
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef class="text-end">Acciones </th>
+                    <td mat-cell *matCellDef="let element" class="text-end">
+                        <div class="d-flex justify-content-end">
+                            <div class="cursor-pointer me-3" [routerLink]="'/edit-hero/'+element.id"
+                                matTooltip="Editar Heroe">
+                                <i class="bi bi-pencil orange"></i>
+                            </div>
+                            <div class="cursor-pointer" (click)="deleteHeroe(element)" matTooltip="Borrar Heroe"><i
+                                    class="bi bi-trash3 red"></i></div>
+                        </div>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [length]="vm.data.totalHeroes" [pageSize]="5"
+                (page)="handlePageEvent($event)"></mat-paginator>
+        </div>
+    </ng-container>
+    <ng-template #emptyList>
+        <div class="card text-center">
+            <div class="py-4">
+                No hay heroes creados
+            </div>
+        </div>
+    </ng-template>
 </ng-container>
-<ng-template #loading>
-
-</ng-template>
