--- a/src/app/features/hero/components/hero-upsert/hero-upsert.component.html
+++ b/src/app/features/hero/components/hero-upsert/hero-upsert.component.html
@@ -1,43 +1,47 @@
 <div class="card p-4">
-    <h1><i class="bi bi-arrow-left me-3 cursor-pointer" (click)="goBack()"></i>{{id ? 'Editar Super heroe' : 'Crear SuperHeroe'}}</h1>
-    <form class="mt-3" [formGroup]="heroeForm" (ngSubmit)="submit()">
-        <div class="row">
-            <div class="col-md-6">
-            <mat-form-field class="w-100" appearance="outline">
-                <mat-label>Nombre</mat-label>
-                <input formControlName="name" matInput type="text" name placeholder="Ingresar Nombre">
-            </mat-form-field>
-        </div>
-        <div class="col-md-6">
-            <mat-form-field class="w-100" appearance="outline">
-                <mat-label>Poderes</mat-label>
-                <input formControlName="power" matInput type="text" placeholder="Ingresar sus poderes">
-            </mat-form-field>
-        </div>
-        <div class="col-md-6">
-            <mat-form-field class="w-100" appearance="outline">
-                <mat-label>Peso</mat-label>
-                <input formControlName="weight" matInput type="number" placeholder="Ingresar Peso">
-            </mat-form-field>
-        </div>
-        <div class="col-md-6">
-            <mat-form-field class="w-100" appearance="outline">
-                <mat-label>Altura</mat-label>
-                <input formControlName="height" matInput type="number" placeholder="Ingresar Altura">
-            </mat-form-field>
-        </div>
-        <div class="col-md-6">
-            <mat-form-field class="w-100" appearance="outline">
-                <mat-label>Enemigo</mat-label>
-                <input formControlName="enemy" matInput type="text" placeholder="Su rival de siemper">
-            </mat-form-field>
-        </div>
-    </div>
+    <h1><i class="bi bi-arrow-left me-3 cursor-pointer" (click)="goBack()"></i>
+    {{id ? 'Editar Super heroe' : 'Crear SuperHeroe'}}</h1>
 
-    <div class="row justify-content-end">
-        <div class="col-md-3">
-            <button class="w-100" mat-flat-button color="primary" [disabled]="heroeForm.invalid">{{id ? 'Editar Super Heroe' : 'Crear Super Heroe'}}</button>
+
+    <form class="mt-3" [formGroup]="heroeForm" (ngSubmit)="submit()">
+        <div class="row"> 
+            <div class="col-md-6">
+                <mat-form-field class="w-100" appearance="outline">
+                    <mat-label>Nombre</mat-label>
+                    <input appNameCapitalize formControlName="name" matInput type="text" name placeholder="Ingresar Nombre">
+                </mat-form-field>
+            </div>
+            <div class="col-md-6">
+                <mat-form-field class="w-100" appearance="outline">
+                    <mat-label>Poderes</mat-label>
+                    <input formControlName="power" matInput type="text" placeholder="Ingresar sus poderes">
+                </mat-form-field>
+            </div>
+            <div class="col-md-6">
+                <mat-form-field class="w-100" appearance="outline">
+                    <mat-label>Altura</mat-label>
+                    <input formControlName="height" matInput type="number" placeholder="Ingresar Altura">
+                </mat-form-field>
+            </div>
+            <div class="col-md-6">
+                <mat-form-field class="w-100" appearance="outline">
+                    <mat-label>Peso</mat-label>
+                    <input formControlName="weight" matInput type="number" placeholder="Ingresar Peso">
+                </mat-form-field>
+            </div>
+            <div class="col-md-6">
+                <mat-form-field class="w-100" appearance="outline">
+                    <mat-label>Enemigo</mat-label>
+                    <input formControlName="enemy" matInput type="text" placeholder="Su rival de siempre">
+                </mat-form-field>
+            </div>
         </div>
-    </div>
-</form>
+
+        <div class="row justify-content-end">
+            <div class="col-md-3 text-end">
+                <button class="p-2" mat-flat-button color="primary"
+                    [disabled]="heroeForm.invalid">{{id ? 'Editar Super Heroe' : 'Crear Super Heroe'}}</button>
+            </div>
+        </div>
+    </form>
 </div>
