--- a/src/app/features/hero/hero.component.html
+++ b/src/app/features/hero/hero.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar mode="query" *ngIf="isLoading$ | async" ></mat-progress-bar>
 <app-topbar></app-topbar>
 <div class="container mt-5">
     <router-outlet></router-outlet>
