--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+
 :root {
   --mat-toolbar-standard-height: 64px;
   --bs-body-bg: #eee;
@@ -26,9 +27,15 @@ h1 {
 .cursor-pointer {
   cursor: pointer;
 }
-table, .card {
+.card {
   background: #fff;
   box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   overflow: hidden;
+}
+:host ::ng-deep{
+
+  .mat-mdc-unelevated-button:not(:disabled) {
+    background-color: #2b9e69;
+  }
 }
