add filter hero

--- a/src/app/features/hero/components/hero-list/hero-list.component.html
+++ b/src/app/features/hero/components/hero-list/hero-list.component.html
@@ -60,7 +60,7 @@
     <ng-template #emptyList>
         <div class="card text-center">
             <div class="py-4">
-                No hay heroes creados
+                No se han encontrado resultados
             </div>
         </div>
     </ng-template>
