add styles and directive Capitalize

--- a/src/app/features/hero/components/hero-upsert/hero-upsert.component.html
+++ b/src/app/features/hero/components/hero-upsert/hero-upsert.component.html
@@ -39,7 +39,7 @@
 
         <div class="row justify-content-end">
             <div class="col-md-3 text-end">
-                <button class="p-2" mat-flat-button color="primary"
+                <button class="mat-primary p-4" mat-flat-button color="primary"
                     [disabled]="heroeForm.invalid">{{id ? 'Editar Super Heroe' : 'Crear Super Heroe'}}</button>
             </div>
         </div>
