--- a/src/app/features/hero/components/hero-list/hero-list.component.html
+++ b/src/app/features/hero/components/hero-list/hero-list.component.html
@@ -38,7 +38,7 @@
                     <td mat-cell *matCellDef="let element"> {{element.enemy}} </td>
                 </ng-container>
                 <ng-container matColumnDef="actions">
-                    <th mat-header-cell *matHeaderCellDef class="text-end">Acciones </th>
+                    <th mat-header-cell *matHeaderCellDef class="text-end">Acciones</th>
                     <td mat-cell *matCellDef="let element" class="text-end">
                         <div class="d-flex justify-content-end">
                             <div class="cursor-pointer me-3" [routerLink]="'/edit-hero/'+element.id"
@@ -53,7 +53,7 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
-            <mat-paginator [length]="vm.data.totalHeroes" [pageSize]="5"
+            <mat-paginator *ngIf="vm.data.isPaginatorAvailable && vm.data.totalHeroes > 5" [length]="vm.data.totalHeroes" [pageSize]="5"
                 (page)="handlePageEvent($event)"></mat-paginator>
         </div>
     </ng-container>
